# neon_mir

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_essentia.sh  build_gaia.sh  deploy.sh  install_deps.sh
clients/core/include/: NeonObject.hpp  ZMQOutputStream.hpp  renderable.hpp
clients/procedural/include/: grid-1.hpp  grid-shader-1.hpp  mountain-1.hpp  mountain-shader-1.hpp
clients/procedural/src/: grid-1.cpp  grid-shader-1.cpp  mountain-1.cpp  mountain-shader-1.cpp
clients/release-demo/: CMakeLists.txt
clients/release-demo/include/: audio-processor.hpp  release-demo.hpp
clients/release-demo/src/: audio-processor.cpp  release-demo.cpp  spectrum-ring-buffer.cpp
clients/resources/: test-gfx-data.conf  test-gfx-shaders.conf
clients/resources/data/: test1.json
clients/resources/shaders/: grid-1_ps.glsl  grid-1_vert.glsl  grid1.json  mountain-1.json  mountain-1_ps.glsl  scanline_ps.glsl
clients/test-client-1/: CMakeLists.txt
clients/test-client-1/src/: test-client-1.cpp
clients/test-client-2/: CMakeLists.txt
clients/test-client-2/src/: test-client-2.cpp
clients/test-full-pipe/: CMakeLists.txt
clients/test-full-pipe/include/: audio-processor.hpp  test-full-pipe.hpp
clients/test-full-pipe/resources/: test-gfx-data.conf
clients/test-full-pipe/resources/data/: motd.txt
clients/test-full-pipe/src/: audio-processor.cpp  test-full-pipe.cpp
clients/test-gfx-1/: CMakeLists.txt
clients/test-gfx-1/include/: test-gfx-1.hpp  test-shader-1.hpp
clients/test-gfx-1/src/: test-gfx-1.cpp  test-shader-1.cpp
clients/test-pipeline/: CMakeLists.txt
clients/test-pipeline/include/: audio-processor.hpp
clients/test-pipeline/src/: audio-processor.cpp  test-pipeline.cpp
clients/test-pulse-audio-input/: CMakeLists.txt
clients/test-pulse-audio-input/src/: test-pulse-audio-input.cpp
clients/test-scene-manager/: CMakeLists.txt
clients/test-scene-manager/include/: test-scene-manager.hpp  test-shader-1.hpp
clients/test-scene-manager/resources/data/: test1.json
clients/test-scene-manager/src/: audio-processor.cpp  test-scene-manager.cpp
clients/test-spectrum/: CMakeLists.txt
clients/test-spectrum-gfx/: CMakeLists.txt
clients/test-spectrum-gfx/include/: audio-processor.hpp  test-gfx-1.hpp  test-spectrum-gfx.hpp
clients/test-spectrum-gfx/resources/shaders/: test_ps.glsl
clients/test-spectrum-gfx/src/: audio-processor.cpp  test-gfx-1.cpp  test-spectrum-gfx.cpp
clients/test-spectrum/src/: test-spectrum.cpp
cpp-netlib/: PKGBUILD
extensions/boostbuffer/: boostbuffer.cpp  boostbuffer.h
include/: audio-session.hpp  core-handler.hpp  core_handler.hpp  debuglogger.hpp  essentia-session.hpp  essentia.hpp  neon-mir.hpp  session-header.hpp  session-server.hpp
libs/: install_libs.sh
libs/debuglogger/: CMakeLists.txt
libs/debuglogger/metadata/: debugloggerConfig.cmake.in
libs/debuglogger/src/: debuglogger.cpp
libs/pulse-audio-input/: CMakeLists.txt
libs/pulse-audio-input/include/: pulse_audio_stream.h  pulse_audio_stream.hpp
libs/pulse-audio-input/metadata/: pulse-audio-inputConfig.cmake.in
libs/pulse-audio-input/src/: pulse_audio_callbacks.cpp  pulse_audio_stream.cpp
libs/scene-manager/: CMakeLists.txt
libs/scene-manager/include/: scene-manager.hpp
libs/scene-manager/metadata/: scene-managerConfig.cmake.in  scenemanagerConfig.cmake.in  test1.json
libs/scene-manager/src/: scene-manager.cpp
metadata/: neon.session.capnp
notes/: sample_ideas
server/: CMakeLists.txt
server/include/: audio-session.hpp  essentia-session.hpp  neon-mir.hpp  session-server.hpp
server/src/: audio-session.cpp  essentia-session.cpp  neon-mir.cpp  session-server.cpp
src/: audio-session.cpp  core-handler.cpp  core-router.cpp  essentia-session.cpp  essentia.cpp  neon-mir.cpp  session-header.cpp  session-server.cpp  test1.cpp
